--- a/card.html
+++ b/card.html
@@ -22,7 +22,7 @@
     </div>
   </body>
 </html>
-
+<style>
 *{
     margin: 0;
     padding: 0;
@@ -78,5 +78,5 @@ h1{
     color: gray;
     text-align:center;
  } 
-
+</style>
 /* align content property only works when flex wrap property is applied .This property allows us to align everything on The Cross Axis. */
